--- a/segmentgrouping/documents/thesis/resources/thesis.bib
+++ b/segmentgrouping/documents/thesis/resources/thesis.bib
@@ -1,7 +1,7 @@
 @article{Zhao2017,
   title={A Modified Segmentation Approach for Overlapping Elliptical Objects with Various Sizes},
   author={Guanghui Zhao and Xingyan Zi and Kaitai Liang and Panyi Yun, Junwei Zhou},
-  journal={{Green, Pervasive, and Cloud Computing: 12th International Conference, GPC 2017, Cetara, Italy, May 11-14, 2017, Proceedings}},
+  journal={{12th International Conference on Green, Pervasive, and Cloud Computing, GPC 2017}},
   volume={10232},
   pages={222--236},
   year={2017},
@@ -94,7 +94,7 @@ month={Aug},}
 
 @INPROCEEDINGS{LCF-ARF, 
 author={Jun Wei and Y. Hagihara and H. Kobatake}, 
-booktitle={Proceedings 1999 International Conference on Image Processing (Cat. 99CH36348)}, 
+booktitle={Proceedings International Conference on Image Processing}, 
 title={Detection of cancerous tumors on chest X-ray images -candidate detection filter and its evaluation}, 
 year={1999}, 
 volume={3}, 
@@ -110,7 +110,6 @@ month={},}
  author = {Pereira, Carlos S. and Fernandes, Hugo and Mendon\c{c}a, Ana Maria and Campilho, Aur{\'e}lio},
  title = {Detection of Lung Nodule Candidates in Chest Radiographs},
  booktitle = {Proceedings of the 3rd Iberian Conference on Pattern Recognition and Image Analysis, Part II},
- series = {IbPRIA '07},
  year = {2007},
  isbn = {978-3-540-72848-1},
  location = {Girona, Spain},
@@ -144,6 +143,17 @@ journal={Journal of the ACM},
 title = {Sequential Operations in Digital Picture Processing},
 volume = {13},
 booktitle = {J. ACM}
+}
+
+@article{edge-to-seed-point,
+  title={Segmentation, inference and classification of partially overlapping nanoparticles},
+  author={Park, Chiwoo and Huang, Jianhua Z and Ji, Jim X and Ding, Yu},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={35},
+  number={3},
+  pages={1--1},
+  year={2013},
+  publisher={IEEE}
 }
 
 @INPROCEEDINGS{CSS,
@@ -211,8 +221,8 @@ keywords = "Distance transform, Image processing, Pattern recognition, Fuzzy -me
                Heikki Haario},
   title     = {Comparison of Concave Point Detection Methods for Overlapping Convex
                Objects Segmentation},
-  booktitle = {Image Analysis - 20th Scandinavian Conference, {SCIA} 2017, Troms{\o},
-               Norway, June 12-14, 2017, Proceedings, Part {II}},
+  booktitle = {The 20th Scandinavian Conference on Image Analysis, {SCIA} 2017, Troms{\o},
+               Norway},
   pages     = {245--256},
   year      = {2017},
   url       = {https://doi.org/10.1007/978-3-319-59129-2_21},
@@ -276,7 +286,6 @@ month={Jul},}
  numpages = {4},
  url = {http://dl.acm.org/citation.cfm?id=1699872.1699875},
  acmid = {1699875},
- publisher = {IEEE Press},
  address = {Piscataway, NJ, USA},
  keywords = {delaunay triangulation, geometric grouping, nuclear segmentation},
 } 
@@ -372,6 +381,12 @@ keywords = "Bubble images, Highly overlapping ellipses, Large ellipse clusters, 
 }
 
 
+@misc{suite,
+  title = {{A suite of minimal bounding objects}},
+  howpublished = "https://nl.mathworks.com/matlabcentral/fileexchange/34767-a-suite-of-minimal-bounding-objects",
+    note = "[Online; accessed January, 29, 2017]"
+}
+
 @article{farhan,
 title = "A Novel Method for Splitting Clumps of Convex Objects Incorporating Image Intensity and Using Rectangular Window-Based Concavity Point-Pair Search",
 author = "Muham Farhan and Olli Yli-Harja and Antti Niemistö",
@@ -414,7 +429,7 @@ ISSN={1522-4880},}
 @article{canny,
  author = {Canny, J},
  title = {A Computational Approach to Edge Detection},
- journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+ journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
  issue_date = {June 1986},
  volume = {8},
  number = {6},
